--- a/portlets/mapViewer-portlet/docroot/html/hslayers.html
+++ b/portlets/mapViewer-portlet/docroot/html/hslayers.html
@@ -9,9 +9,11 @@
             <div hs.toolbar.directive ng-controller="hs.toolbar.controller" ng-if="Core.exists('hs.toolbar.controller')"></div>
 
             <div class="gui-overlay">
+
                 <div class="search-container" ng-controller="hs.search.controller" ng-if="!Core.exists('hs.toolbar.controller')">
                     <div>
                         <div hs.search.directive_searchinput></div>
+                        <div hs.search.directive_searchresults></div>
                     </div>
                 </div>
 
@@ -33,12 +35,18 @@
                             <div hs.permalink.directive             hs.draggable ng-controller="hs.permalink.controller" ng-if="Core.exists('hs.permalink.controller')" ng-show="Core.panelVisible('permalink', this)"></div>
                             <div hs.query.directive_infopanel       hs.draggable ng-controller="hs.query.controller" id="infopanel" ng-if="Core.exists('hs.query.controller')" ng-show="Core.panelVisible('info', this)"></div>
                             <div hs.status_creator.directive_panel  hs.draggable ng-controller="hs.status_creator.controller" ng-if="Core.exists('hs.status_creator.controller')" ng-show="Core.panelVisible('status_creator', this)"></div>
-                            <div hs.search.directive_searchresults  hs.draggable ng-controller="hs.search.controller" ng-if="Core.exists('hs.search.controller')" ng-show="Core.panelVisible('search', this)"></div>
+                            <div hs.routing.directive               hs.draggable ng-controller="hs.routing.controller" ng-if="Core.exists('hs.routing.controller')" ng-show="Core.panelVisible('routing', this)"></div>
                             <div hs.customhtml.directive ng-if="Core.exists('hs.customhtml.controller')"></div>
                         </div>
                     </div>
                 </div>
+                <div id="hs-info-container">
+                    <div id="hs-info-area">
+                        <div hs.info.directive ng-controller="hs.info.controller" ng-if="Core.exists('hs.info.controller')"></div>
+                    </div>
+                </div>
             </div>
+
             <div id="hs-dialog-area">
                 <div hs.lodexplorer.directive_sparqllogdialog ng-controller="hs.lodexplorer.controller_sparqllogdialog"  ng-if="Core.exists('SparqlLogDialog')"></div>
                 <!--<div hs.status_creator.directive ng-controller="hs.status_creator.controller" ng-if="Core.exists('hs.status_creator.controller')" ng-show="Core.panelVisible('status_creator', this)"></div>-->
